# brython

./: .gitconfig  .gitignore  .hgignore  .testem.json  .travis.yml  .travis.yml.tmpl  CONTRIBUTING.md  LICENCE.txt  LICENSE math lgamma.txt  Pipfile  README.md  README.txt  README_pt_br.md  ScriptServer3.py  bihan_app.py  bower.json  clean_pyc.bat  clean_pyc.sh  copy_to_af.sh  diff-with-brython-dev.sh  glo-with-brython-dev.sh  index.html  manage.py  manifest.json  package.json  params.json  requirements.txt  server.py  server_aiohttp.py  server_modular_send_head.py  small_node_app.py  test.html  wsgi.py
brython-stubs/: setup.py
cgi-bin/: get_test.py  post_test.py  precompiled.py  save_bench_results.py  script_timer.py  speed.py  store_speed.py  timeout.py
npm/: README.md  package.json
releases/: README.rst  README.txt  demo.tmpl  index.html
scripts/: DerivedCoreProperties.txt  Makefile  adapt_grammar_actions.py  apply_jshint.py  check_doc_versions.py  compile.py  core_scripts.py  custom_xml.gram  deno_bridge.ts  directories.py  downloads.py  ensure_phantomjs.sh  find_modules.py  generate_parser.py  get_type_slots.py  (+50 more)
setup/: README.rst  brython.py  list_modules.py  long_description.md  make_package.py  pyproject.toml  requirements.txt  server.py  setup.py
setup/brython/: __init__.py  __main__.py  list_modules.py  make_file_system.py  make_package.py
setup/data/: .bundle-ignore  README.txt  demo.html  demo.tmpl  index.html  make_bundle.py  prepare_setup.py  server.py  update_bundle.py
setup/data/tools/: make_bundle.py  make_single_page.py  python_minifier.py
(+1699 files in other folders)
